--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="nav">
 		<div id="nav wrapper">
 			<ul> 
-				<li><a href="index.html"> Home </a></li><li>
+				<li><a href="index.html"> Home sweat </a></li><li>
 					<a href="#"> About </a></li><li>
 					<a href="#"> Contact </a></li><li>
 					<a href="https://www.facebook.com/haaruun.dhubat"> Social </a>
